[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.14",
]

[project.scripts]
hello-agent = "hello_agent:main"
abc = "hello_agent.agent_hello:my_first_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
